# matrix-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  build-backend-dev.sh  build-backend.sh  build-dev.sh  build.sh  matrix-manager.code-workspace  test.sh
.github/: dependabot.yml
client/: Cargo.toml  README.md  daily-restart.service  daily-restart.timer  matrix-client.conf
client/.cargo/: config.toml
client/src/: drive_matrix.rs  emulate.rs  example.rs  main.rs  state.rs
client/src/commands/: brightness.rs  clear.rs  colour.rs  image.rs  interpret.rs  line.rs  mod.rs  pixel.rs  text.rs
server/: Cargo.toml  hostname_lookup.rs
server/src/: board_variables.rs  boards.rs  config_manager.rs  font_manager.rs  image_manager.rs  main.rs  state_manager.rs
server/src/matrix_server/: server.rs
server/src/matrix_server/helpers/: image_helper.rs  mod.rs  text_helpers.rs
server/src/web_interface/: default.css  index.html  web.rs
shared/: Cargo.toml  LICENSE
shared/src/: board_variables.rs  boards.rs  device_config.rs  lib.rs
wasm_project/: Cargo.toml
wasm_project/src/: app.rs  get.rs  lib.rs  post.rs
wasm_project/src/windows/: mod.rs
wasm_project/src/windows/boards/: board_add.rs  board_delete.rs  board_editor.rs  board_element_editor.rs  board_list.rs  mod.rs
wasm_project/src/windows/devices/: device_delete.rs  device_editor.rs  device_list.rs  mod.rs
wasm_project/src/windows/vars/: mod.rs  var_add.rs  var_delete.rs  var_editor.rs  var_list.rs
