[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.210"
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
embedded-graphics = { version = "0.8.1", features = ["fixed_point"] }
directories = "5.0.1"
#image = { version = "0.25.4", default-features = false, features = ["bmp"] }
pico-args = "0.5.0"
tempfile = "3.13.0"
tinybmp = "0.6.0"
ureq = { version = "2.10.1", features = [ "native-certs" ] }

#[target.'cfg(target_arch = "aarch64")'.dependencies]
rpi-led-panel = "0.6.0"
argh = "0.1.12"

[target.'cfg(target_arch = "x86_64")'.dependencies]
embedded-graphics-simulator = "0.7.0"
