[package]
name = "matrix-manager"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.0"

tokio = { version = "1.40.0", features = [ "full" ]}
axum = { version = "0.7.6", features = [ "http2" ] }
pico-args = "0.5.0"
serde = { version = "1.0.210", features = [ "serde_derive" ] }
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = [ "serde" ] }
ureq = { version = "2.10.1", features = [ "native-certs", "json" ] }
directories = "5.0.1"
derive_builder = { version = "0.20.2" }
bdf = "0.6.0"
anyhow = "1.0.89"
tower-http = "0.6.1"

shared = { path = "../shared" }
tokio-util = "0.7.12"
