[package]
name = "matrix-manager"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3.0"

tokio = { version = "1.41.0", features = [ "full" ]}
axum = { version = "0.7.7", features = [ "http2" ] }
pico-args = "0.5.0"
serde = { version = "1.0.215", features = [ "serde_derive" ] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = [ "serde" ] }
ureq = { version = "2.11.0", features = [ "native-certs", "json" ] }
directories = "5.0.1"
derive_builder = { version = "0.20.2" }
bdf = "0.6.0"
anyhow = "1.0.93"
tower-http = "0.6.1"
tokio-util = "0.7.12"
regex = "1.11.1"
sha2 = "0.10.8"
base64 = "0.22.1"

shared = { path = "../shared" }
