[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = "1.0.210"
serde_json = "1.0.128"
derive_builder = { version = "0.20.2" }
rand = { version = "0.8.5", features = [ "serde" ] }
chrono = "0.4.38"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.22"
