[package]
name = "wasm_project"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.31.0", features = ["serde", "wgpu"] }
egui = { version = "0.29.0", features = [ "color-hex", "log", "persistence", "serde" ] }
log = "0.4.22"
wgpu = { version = "*", features = ["webgpu", "webgl"] }
wasm-bindgen = { version = "0.2.95", features = [ "serde", "serde-serialize", "serde_json" ] }
wasm-bindgen-futures = "0.4.45"
serde = "1.0.215"
serde_json = "1.0.128"
shared = { path = "../shared" }
futures-util = "0.3.31"
regex = "1.11.1"

[dependencies.web-sys]
version = "0.3.72"
features = [
    "HtmlCanvasElement",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "FetchEvent",
    "Window",
    "XmlHttpRequest",
]

#[dev-dependencies]
#wasm-pack = "0.12.1